--- a/FrameWorkCode/AppResources.qrc
+++ b/FrameWorkCode/AppResources.qrc
@@ -10,4 +10,14 @@
         <file>cut.png</file>
         <file>copy.png</file>
     </qresource>
+    <qresource prefix="/Markdown">
+        <file>resources/default.md</file>
+        <file>resources/index.html</file>
+        <file>resources/markdowneditor.qrc</file>
+        <file>resources/3rdparty/markdown.css</file>
+        <file>resources/3rdparty/MARKDOWN-LICENSE.txt</file>
+        <file>resources/3rdparty/marked.js</file>
+        <file>resources/3rdparty/MARKED-LICENSE.txt</file>
+        <file>resources/3rdparty/qt_attribution.json</file>
+    </qresource>
 </RCC>
