--- a/FrameWorkCode/mainwindow.ui
+++ b/FrameWorkCode/mainwindow.ui
@@ -213,7 +213,7 @@ p, li { white-space: pre-wrap; }
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="actionBold"/>
+    <addaction name="actionFormat"/>
    </widget>
    <addaction name="menuSelectLanguage"/>
    <addaction name="menuOCR_Correction_Window"/>
@@ -499,7 +499,12 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionBold">
    <property name="text">
-    <string>Bold</string>
+    <string>Format</string>
+   </property>
+  </action>
+  <action name="actionFormat">
+   <property name="text">
+    <string>Format</string>
    </property>
   </action>
  </widget>
